Fixed backgroud-stretching for section-group in Firefox

--- a/src/scss/components/_section_group.scss
+++ b/src/scss/components/_section_group.scss
@@ -2,11 +2,13 @@
   &--triple-skew {
     background-image: url('/img/triple-desktop-bg.svg');
     background-repeat: no-repeat;
+    background-size: 100% 2250px;
   }
 
   &--double-skew {
     background-image: url('/img/double-desktop-bg.svg');
     background-repeat: no-repeat;
+    background-size: 100% 1500px;
   }
 }
 
